--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400&family=Philosopher:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header-space"></div>
@@ -102,7 +105,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
+                            <!-- <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1> -->
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -111,7 +114,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
+                            <!-- <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1> -->
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -120,7 +123,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
+                            <!-- <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1> -->
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
@@ -129,7 +132,7 @@
                     <div class="slide-main">
                         <div class="hero-text">
                             <p>Best Quality of Design</p>
-                            <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1>
+                            <!-- <h1 class="hero-heading"><span>Luxury Designer <br> Jwellery</span></h1> -->
                             <div class="link-text"><a href="#">Shop Now &nbsp;<i class="fas fa-long-arrow-alt-right"></i></a></div>
                         </div>
                     </div>
